# simple-kfp-task

./: pyproject.toml  requirements.txt
examples/: remote_execution.py  train.py
simple_kfp_task/: __init__.py  cli.py  deploykf.py  git_helper.py  pipeline.py  requirements.txt  task.py  utils.py
